@@ -18,6 +18,7 @@ Revision history for SPVM
         * Remove SPVM_NATIVE_C_BASIC_TYPE_CATEGORY_CALLBACK
         * Change ID of SPVM_NATIVE_C_BASIC_TYPE_CATEGORY_ANY_OBJECT from 10 to 9
         * Remove "byte_object_basic_type_id" native API. ID 9 is reused by "api" native API.
+        * Remove "short_object_basic_type_id" native API. ID 10 is reused by "allocator" native API.
 0.9514  2022-05-02
         [CHANGE]
         * Add no_compiler_api to SPVM::Builder::Config::Exe
